// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteStorage instance getById should return not found route 1`] = `
Object {
  "createPathname": [Function],
  "id": "@@routo/NOT_FOUND",
  "keys": Array [],
  "path": "/404",
  "regexp": /\\^\\\\/404\\$/i,
}
`;

exports[`RouteStorage instance getById should return not found route 2`] = `
Object {
  "createPathname": [Function],
  "id": "@@routo/NOT_FOUND",
  "keys": Array [],
  "path": "/404",
  "regexp": /\\^\\\\/404\\$/i,
}
`;

exports[`RouteStorage instance getById should return parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/POST",
  "keys": Array [
    Object {
      "modifier": "",
      "name": "id",
      "pattern": "[^\\\\/#\\\\?]+?",
      "prefix": "/",
      "suffix": "",
    },
  ],
  "path": "/posts/:id",
  "regexp": /\\^\\\\/posts\\(\\?:\\\\/\\(\\[\\^\\\\/#\\\\\\?\\]\\+\\?\\)\\)\\$/i,
}
`;

exports[`RouteStorage instance getById should return simple route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/HOME",
  "keys": Array [],
  "path": "/",
  "regexp": /\\^\\\\/\\$/i,
}
`;

exports[`RouteStorage instance getByPathname should return not found route 1`] = `
Object {
  "createPathname": [Function],
  "id": "@@routo/NOT_FOUND",
  "keys": Array [],
  "path": "/404",
  "regexp": /\\^\\\\/404\\$/i,
}
`;

exports[`RouteStorage instance getByPathname should return not found route 2`] = `
Object {
  "createPathname": [Function],
  "id": "@@routo/NOT_FOUND",
  "keys": Array [],
  "path": "/404",
  "regexp": /\\^\\\\/404\\$/i,
}
`;

exports[`RouteStorage instance getByPathname should return not found route 3`] = `
Object {
  "createPathname": [Function],
  "id": "@@routo/NOT_FOUND",
  "keys": Array [],
  "path": "/404",
  "regexp": /\\^\\\\/404\\$/i,
}
`;

exports[`RouteStorage instance getByPathname should return parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/POST",
  "keys": Array [
    Object {
      "modifier": "",
      "name": "id",
      "pattern": "[^\\\\/#\\\\?]+?",
      "prefix": "/",
      "suffix": "",
    },
  ],
  "path": "/posts/:id",
  "regexp": /\\^\\\\/posts\\(\\?:\\\\/\\(\\[\\^\\\\/#\\\\\\?\\]\\+\\?\\)\\)\\$/i,
}
`;

exports[`RouteStorage instance getByPathname should return simple route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/HOME",
  "keys": Array [],
  "path": "/",
  "regexp": /\\^\\\\/\\$/i,
}
`;

exports[`createRoute should extend parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/POST",
  "keys": Array [
    Object {
      "modifier": "",
      "name": "id",
      "pattern": "[^\\\\/#\\\\?]+?",
      "prefix": "/",
      "suffix": "",
    },
  ],
  "path": "/posts/:id",
  "regexp": /\\^\\\\/posts\\(\\?:\\\\/\\(\\[\\^\\\\/#\\\\\\?\\]\\+\\?\\)\\)\\$/i,
}
`;

exports[`createRoute should extend simple route 1`] = `
Object {
  "createPathname": [Function],
  "id": "router/HOME",
  "keys": Array [],
  "path": "/",
  "regexp": /\\^\\\\/\\$/i,
}
`;
